--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
     "minimist": "^1.2.5"
+  },
+  "devDependencies": {
+    "hardhat": "^2.6.2"
   }
 }
